# BrewStanza

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BrewStanza_PRD_v1.docx  FDD_v1.1.md  PRD_v1.1.md  TODO.md  config.md  usage.md
scripts/: setup_venv.sh
src/brewstanza/: __init__.py  cli.py  config.py  test_cli.py
src/brewstanza/analyzer/: __init__.py  storage.py  test_storage.py
src/brewstanza/exporter/: __init__.py  export.py  test_exporter.py
src/brewstanza/scanner/: __init__.py  apps.py  disk.py  disk_scanner.py  homebrew.py  test_disk.py  test_homebrew.py
src/brewstanza/ui/: __init__.py  renderer.py  test_renderer.py
tests/: __init__.py
tests/analyzer/: test_storage.py
tests/cli/: test_cli.py
tests/exporter/: test_exporter.py
tests/scanner/: test_apps.py  test_homebrew.py
tests/ui/: test_renderer.py
