[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brewstanza"
version = "1.0.0"
description = "A minimalist macOS CLI tool for managing Homebrew packages, installed applications, and storage analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Willian Duque"}
]
keywords = ["macos", "homebrew", "cli", "package-manager", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]
github = [
    "PyGithub>=2.0.0",
]

[project.scripts]
brewstanza = "brewstanza.cli:main"

[project.urls]
Homepage = "https://github.com/wduqu001/brewstanza"
Documentation = "https://github.com/wduqu001/brewstanza#readme"
Repository = "https://github.com/wduqu001/brewstanza.git"
Issues = "https://github.com/wduqu001/brewstanza/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/brewstanza"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["brewstanza"]

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "I"]
lint.ignore = ["W293"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
